# mmbus

./: .dockerignore  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  docker-compose.yml  pyproject.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: audit.yml  ci.yml  competitive-bench.yml  docs.yml  fuzz.yml  wheels-mmcast.yml  wheels.yml
benches/: compare.py  e2e.rs  publish_with_wal.rs  ring.rs
benches/competitive/: RESULTS.md  SPEC.md  _common.py  nats_bench.py
bridge/: Cargo.toml  README.md  pyproject.toml  sample-config.toml
bridge/python/: smoke_test.py
bridge/python/mmbus_bridge/: __init__.py
bridge/src/: bridge.rs  config.rs  frame.rs  lib.rs  python.rs  queue.rs  quic.rs
bridge/systemd/: mmbus-bridge.service
bridge/tests/: forward_smoke.rs  mesh_smoke.rs  psk_auth_smoke.rs  quic_smoke.rs  receive_smoke.rs
crates/mmbus/: Cargo.toml
crates/mmbus-bridge/: Cargo.toml  README.md  pyproject.toml  sample-config.toml
crates/mmbus-bridge/examples/: bridge_async.py  bridge_python.py
crates/mmbus-bridge/python/: smoke_test.py
crates/mmbus-bridge/python/mmbus_bridge/: __init__.py
crates/mmbus-bridge/src/: bridge.rs  config.rs  frame.rs  main.rs  python.rs  queue.rs  quic.rs
crates/mmbus-bridge/systemd/: mmbus-bridge.service
crates/mmbus-bridge/tests/: forward_smoke.rs  mesh_smoke.rs  psk_auth_smoke.rs  quic_smoke.rs  receive_smoke.rs
crates/mmbus/benches/: e2e.rs  publish_with_wal.rs  ring.rs
crates/mmbus/benches/competitive/: mmbus_bench.py  redis_bench.py  run_all.sh  zmq_bench.py
crates/mmbus/examples/: fastapi_broadcast.py  observability.py  producer.rs  prometheus_exporter.rs  pub.py
crates/mmbus/fuzz/: Cargo.toml
crates/mmbus/fuzz/fuzz_targets/: ring_concurrent.rs
crates/mmbus/src/: bus.rs  config.rs  error.rs  logging.rs  producer_lock.rs  prometheus.rs  publisher.rs  ring.rs  stats.rs  subscriber.rs  subscription.rs  waker.rs
crates/mmbus/src/python/: bus.rs  exceptions.rs  subscription.rs
crates/mmbus/src/wal/: config.rs  mod.rs  reader.rs  record.rs  segment_reader.rs  segment_writer.rs  stats.rs  wal.rs
crates/mmbus/src/wal/v2/: active.rs  durability.rs  mmap_segment_reader.rs  mmap_segment_writer.rs  mod.rs  reader.rs  rotation.rs  wal.rs
crates/mmbus/tests/: clean_topic.rs  crash_recovery.rs  publish_many.rs  recv_into.rs  replay.rs  slow_consumer.rs  spmc.rs  spsc.rs  stress.rs  wakeup_coalescing.rs  wal_acceptance.rs  wal_publisher.rs  wal_subscriber.rs
crates/mmcast/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
crates/mmcast/examples/benchmark/: README.md  docker-compose.yml  run.sh
crates/mmcast/examples/benchmark/loadgen/: Dockerfile  loadgen.py
crates/mmcast/examples/benchmark/mmcast_side/: Dockerfile  app.py
crates/mmcast/examples/benchmark/redis_side/: Dockerfile  app.py
crates/mmcast/examples/fastapi_chat/: README.md  app.py
crates/mmcast/python/mmbus_cast/: __init__.py  _broadcast.py  _event.py  _presence.py  _validate.py  fastapi.py
crates/mmcast/tests/: conftest.py  test_backpressure.py  test_broadcast_core.py  test_concurrency.py  test_django_integration.py  test_event.py  test_fastapi_chat_e2e.py  test_fastapi_helpers.py  test_fastapi_integration.py  test_lifecycle.py  test_multiworker.py  test_payloads.py  test_presence.py  test_presence_hardening.py  test_presence_multiworker.py  test_reconnect.py  test_replay.py  test_smoke.py  test_subscribe_api.py  test_validation.py
docs/: architecture.md  benchmarks-vs-competition.md  plan-rfcs.md  plan-v0.5.md  plan-wal-phase-b.md  plan-wal-v2-lockfree.md  release-checklist.md  research.md  review-2026-05-17.md  rfc-b4b-quic.md  rfc-bridge-python-sdk.md  rfc-multi-machine.md  rfc-wal-phase-b.md  rfc-wal-replay.md  rfc-wal-v2-lockfree.md  rfc-windows.md  roadmap.md  spec-mmcast-v0.1.md
docs/blog/: mmcast-launch.md
docs/runbooks/: README.md  wal-disk-pressure.md
docs/templates/: runbook-template.md  spec-template.md  task-template.md
examples/: consumer.rs  np_pipeline.py  producer.rs  prometheus_exporter.rs  sub.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ring_publish_receive.rs
python/: smoke_test.py
python/mmbus/: __init__.py  bridge.py
src/: bus.rs  config.rs  error.rs  lib.rs  producer_lock.rs  prometheus.rs  publisher.rs  python.rs  ring.rs  stats.rs  subscriber.rs  subscription.rs  waker.rs
src/python/: bus.rs  exceptions.rs  mod.rs  subscription.rs
src/wal/: config.rs  mod.rs  reader.rs  record.rs  segment_reader.rs  segment_writer.rs  stats.rs  wal.rs
src/wal/v2/: active.rs  durability.rs  mmap_segment_reader.rs  mmap_segment_writer.rs  mod.rs  reader.rs  rotation.rs  wal.rs
tests/: clean_topic.rs  crash_recovery.rs  observability_counters.rs  publish_many.rs  recv_into.rs  replay.rs  slow_consumer.rs  spmc.rs  spsc.rs  stress.rs  wakeup_coalescing.rs  wal_acceptance.rs  wal_publisher.rs  wal_subscriber.rs
