# Workspace root for mmbus.
#
# The core library is `crates/mmbus`.  Two sibling crates are deliberately
# kept OUT of this workspace (each is its own standalone workspace / lock):
#
#   * crates/mmbus-bridge — the cross-machine relay.  It pulls in a heavy
#     optional async stack (tokio, quinn, rustls, rcgen, ring) that the core
#     library must never drag into its build or `cargo test` loop.
#   * crates/mmbus/fuzz   — the nightly libfuzzer harness; its
#     sanitizer-instrumented target/ tree is kept separate from the normal
#     build cache.
#
# Excluding both means a bare `cargo build` / `cargo test` at the repo root
# only touches the core library — preserving the fast core iteration loop.
[workspace]
resolver = "2"
members = ["crates/mmbus"]
exclude = ["crates/mmbus-bridge", "crates/mmbus/fuzz"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"

# Release builds (and the maturin wheel) enable thin LTO so the PyO3 wrapper,
# `Bus::publish`, and the ring/WAL write can inline across crate boundaries.
# Thin (not fat) is deliberate: on a crate this small the measured per-call
# publish delta between fat LTO, thin LTO, and no LTO was within noise
# (~257-262 ns/call), so we take the cross-crate inlining at thin's lower
# build cost rather than paying for fat with no measurable gain.  `panic` is
# left at the default `unwind`: PyO3 converts Rust panics into Python
# exceptions, which `abort` would break.
[profile.release]
lto = "thin"
