[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mmbus"
version = "0.2.3"
description = "Zero-copy pub/sub over mmap — Python bindings"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Operating System :: POSIX",
]

[tool.maturin]
# Build the Rust extension as the private mmbus._mmbus sub-module.
# python/mmbus/__init__.py re-exports the public API.
#
# `wal_v2` enables the lock-free mmap-backed WAL backend (v0.2's
# perf push) by default for Python users — without it the wheel
# ships the v0.1 BufWriter backend at ~40k msg/s sustained
# durable throughput; with it, ~4M msg/s.  See
# docs/rfc-wal-v2-lockfree.md.
features = ["python", "wal_v2"]
module-name = "mmbus._mmbus"
python-source = "python"
