[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mmbus"
version = "0.5.1"
description = "Zero-copy pub/sub over mmap — Python bindings"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Operating System :: POSIX",
]

[project.optional-dependencies]
# `pip install mmbus[bridge]` pulls in the in-process cross-machine
# bridge wheel (built from `bridge/pyproject.toml`).  TCP-only — QUIC
# users keep the standalone `mmbus-bridge` binary.  See
# docs/rfc-bridge-python-sdk.md.
bridge = ["mmbus-bridge"]

[tool.maturin]
# Build the Rust extension as the private mmbus._mmbus sub-module.
# python/mmbus/__init__.py re-exports the public API.
#
# `wal_v2` enables the lock-free mmap-backed WAL backend (v0.2's
# perf push) by default for Python users — without it the wheel
# ships the v0.1 BufWriter backend at ~40k msg/s sustained
# durable throughput; with it, ~4M msg/s.  See
# docs/rfc-wal-v2-lockfree.md.
#
# The in-process bridge (v0.3.0) ships as a separate companion wheel
# `mmbus-bridge` built from `bridge/pyproject.toml` — the cyclic
# Cargo dep prevents bundling it into the core wheel.  See
# docs/rfc-bridge-python-sdk.md.  Install with
# `pip install mmbus[bridge]` (preferred) or
# `pip install mmbus mmbus-bridge`.
features = ["python", "wal_v2"]
module-name = "mmbus._mmbus"
python-source = "python"
# The Rust crate moved under crates/mmbus when the repo became a Cargo
# workspace; pyproject.toml + the `python/` source dir stay at the repo
# root so `pip install .` (and the wheels.yml maturin build) keep working
# unchanged.  manifest-path points maturin at the relocated crate manifest.
manifest-path = "crates/mmbus/Cargo.toml"
