# mmbus-cast — ASGI WebSocket broadcast on top of mmbus.
#
# Pure-Python package — no Rust crate, no maturin.  We use hatchling as the
# build backend to keep the toolchain trivial: `pip install -e .` works
# without any compiler.  The Rust core lives in `crates/mmbus` and ships as
# the `mmbus` wheel; mmcast depends on it via PyPI like any other consumer.
#
# Spec: docs/spec-mmcast-v0.1.md.  Dependency direction is one-way
# (mmbus_cast → mmbus); see the spec's "Dependency direction" section.
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mmbus-cast"
version = "0.1.0"
description = "ASGI WebSocket broadcast over mmbus — no Redis, no daemon"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "mmbus contributors" }]
keywords = ["pubsub", "websocket", "broadcast", "fastapi", "asgi", "mmbus", "ipc"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Operating System :: POSIX",
]
# mmbus is pre-1.0; pin to a single minor range and widen post-1.0.  See
# docs/spec-mmcast-v0.1.md "Version pinning".
dependencies = ["mmbus>=0.5,<0.6"]

[project.optional-dependencies]
# `pip install mmbus-cast[fastapi]` for the WS demo + ASGI helpers.
fastapi = ["fastapi>=0.100", "uvicorn[standard]>=0.23"]
# Test-only — kept out of the wheel.
test = ["pytest>=7", "pytest-asyncio>=0.21", "anyio>=4"]

[project.urls]
Homepage = "https://github.com/sintimaski/mmbus"
Repository = "https://github.com/sintimaski/mmbus"
Documentation = "https://github.com/sintimaski/mmbus/tree/main/crates/mmcast"
Issues = "https://github.com/sintimaski/mmbus/issues"

[tool.hatch.build.targets.wheel]
# Source layout: python/mmbus_cast/ → wheel imports as `mmbus_cast`.
packages = ["python/mmbus_cast"]

[tool.hatch.build.targets.sdist]
include = [
    "python/mmbus_cast",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
